2008-05-20  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8445: Align group fields in TCEforms

2008-05-20  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8460: Shortcutmenu needs a proper access check comment (thanks to Stefano Kowalke)
	* Fixed bug #8458: Backendsearchmenu needs a proper access check comment (thanks to Stefano Kowalke)
	* Fixed bug #8456: Browse Links does not use JS library interface

2008-05-19  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7860: Coloring in TS Object Browser depends on "Crop Lines" (thanks to Steffen Kamper)

2008-05-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8454: IRRE - Localization mode is not fetched correctly
	* Code cleanup: Fixed typing errors

2008-05-18  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6576: typolink.addQueryString adds &= to the URL if QUERY_STRING is empty

2008-05-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8277: Enable tabs in sys_workspaces  (thanks to Steffen Kamper)
	* Fixed bug #8439: Help icon in function module is double  (thanks to Steffen Kamper)
	* Fixed bug #8192: typoLink generates wrong links

2008-05-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8348: htmlArea RTE: ctrl+c and ctrl+x do not work in IE with TYPO3 4.2
	* Updated htmlArea RTE version to 1.7.5 for TYPO3 4.2.1

2008-05-14  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8385: Modified tslib_cObj::substituteMarkerArray() misses call parameter (thanks to Francois Suter)

2008-05-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4693: tables definition not compliant with MySQL 5.0 strict mode

2008-05-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8360: locallang.xml charset convertion dont work for LOCAL_LANG['default']

2008-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8351: RTE.classes configuration not honoured by htmlArea RTE Insert/modify link class selector

2008-05-06  Dmitry Dulepov  <dmitry@typo3.org>
